# HumanityOs

./: .firebaserc  .gitignore  ENV.md  README.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  task.md
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
backend/: .env.template  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  auditor.py  base.py  commander.py  specialists.py  workflow.py
backend/app/agents/skills/: __init__.py  communication_skill.py  medical_skill.py  navigation_skill.py  resource_skill.py  search_skill.py  translation_skill.py  vision_skill.py  weather_skill.py
backend/app/api/: mcp_server.py
backend/app/api/v1/: __init__.py  endpoints.py  simulation.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: base.py
backend/app/services/: ai.py  cache.py  mcp.py  vector.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_main.py  test_mcp.py  test_security.py  test_skills.py
docs/: api_documentation.md  architecture_documentation.md  database_schema.md  demo_script.md  deployment_guide.md  installation_guide.md  submission_writeup.md  troubleshooting_guide.md
frontend/: .env.template  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: deploy-cloudrun.sh
(+5 files in other folders)
